# dive-computer-proto

./: .envrc  Cargo.toml
.direnv/: flake-profile-2-link
docs/: protocol.md  tasks.md
examples/: README.md  command_example.rs  dive_calc_example.rs  protocol_example.rs  sensor_example.rs
src/: commands.rs  dive_calc.rs  examples.rs  lib.rs  protocol.rs  sensor.rs
